--- a/Assets/Tests/PlayTests/PlayTests.asmdef
+++ b/Assets/Tests/PlayTests/PlayTests.asmdef
@@ -1,14 +1,12 @@
 {
-    "name": "PlayModeTests",
+    "name": "PlayTests",
     "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "GameAssembly"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
