--- a/Assets/Scripts/GameAssembly.asmdef
+++ b/Assets/Scripts/GameAssembly.asmdef
@@ -6,7 +6,8 @@
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
         "GUID:f88fb04354076c646a4107a491394033",
         "GUID:df1dea26b8503004d92d621e88aa9421",
-        "GUID:c1846501e001b8f43a97e6db752ff045"
+        "GUID:49b49c76ee64f6b41bf28ef951cb0e50",
+        "GUID:e6234d6c1f7bf4e4db20eddc411c00b8"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
