HUD view, без функционала

--- a/Assets/Scripts/GameAssembly.asmdef
+++ b/Assets/Scripts/GameAssembly.asmdef
@@ -7,7 +7,9 @@
         "GUID:f88fb04354076c646a4107a491394033",
         "GUID:df1dea26b8503004d92d621e88aa9421",
         "GUID:49b49c76ee64f6b41bf28ef951cb0e50",
-        "GUID:e6234d6c1f7bf4e4db20eddc411c00b8"
+        "GUID:e6234d6c1f7bf4e4db20eddc411c00b8",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:2bafac87e7f4b9b418d9448d219b01ab"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
