--- a/Assets/Scripts/GameAssembly.asmdef
+++ b/Assets/Scripts/GameAssembly.asmdef
@@ -9,7 +9,8 @@
         "GUID:49b49c76ee64f6b41bf28ef951cb0e50",
         "GUID:e6234d6c1f7bf4e4db20eddc411c00b8",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:2bafac87e7f4b9b418d9448d219b01ab"
+        "GUID:2bafac87e7f4b9b418d9448d219b01ab",
+        "GUID:31976cc9e85bdd9459e856fcb40d0d50"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
