--- a/Assets/Tests/EditorTests/EditorTests.asmdef
+++ b/Assets/Tests/EditorTests/EditorTests.asmdef
@@ -14,7 +14,8 @@
     "overrideReferences": true,
     "precompiledReferences": [
         "nunit.framework.dll",
-        "NSubstitute.dll"
+        "NSubstitute.dll",
+        "Moq.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
