Заготовка для перформанс тестов

--- a/Assets/Tests/UnitTests/UnitTests.asmdef
+++ b/Assets/Tests/UnitTests/UnitTests.asmdef
@@ -1,10 +1,11 @@
 {
-    "name": "EditorTests",
+    "name": "UnitTests",
     "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "GameAssembly"
+        "GameAssembly",
+        "TestUtils"
     ],
     "includePlatforms": [
         "Editor"
