--- a/Assets/Tests/PerformanceTests/PerformanceTests.asmdef
+++ b/Assets/Tests/PerformanceTests/PerformanceTests.asmdef
@@ -1,10 +1,12 @@
 {
-    "name": "PlayTests",
+    "name": "PerformanceTests",
     "rootNamespace": "",
     "references": [
-        "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner",
-        "GameAssembly"
+        "GUID:5cbe0795f0c3e5f41a12e08382344638",
+        "GUID:27619889b8ba8c24980f49ee34dbb44a",
+        "GUID:0acc523941302664db1f4e527237feb3",
+        "GUID:c0dd0d10738d4ad4a9de57c559d0ca1b",
+        "GUID:c03066ede49430544a8e6df7fcff8ffb"
     ],
     "includePlatforms": [
         "Editor"
@@ -13,8 +15,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll",
-        "NSubstitute.dll"
+        "NSubstitute.dll",
+        "nunit.framework.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
