--- a/Assets/Tests/TestUtils/TestUtils.asmdef
+++ b/Assets/Tests/TestUtils/TestUtils.asmdef
@@ -1,10 +1,8 @@
 {
-    "name": "PlayTests",
+    "name": "TestUtils",
     "rootNamespace": "",
     "references": [
-        "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner",
-        "GameAssembly"
+        "GUID:5cbe0795f0c3e5f41a12e08382344638"
     ],
     "includePlatforms": [
         "Editor"
@@ -12,14 +10,9 @@
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
-    "precompiledReferences": [
-        "nunit.framework.dll",
-        "NSubstitute.dll"
-    ],
+    "precompiledReferences": [],
     "autoReferenced": false,
-    "defineConstraints": [
-        "UNITY_INCLUDE_TESTS"
-    ],
+    "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
 }
