UniTask для стейт машины

--- a/Assets/Scripts/GameAssembly.asmdef
+++ b/Assets/Scripts/GameAssembly.asmdef
@@ -11,7 +11,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:2bafac87e7f4b9b418d9448d219b01ab",
         "GUID:31976cc9e85bdd9459e856fcb40d0d50",
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
