--- a/Assets/Tests/PerformanceTests/PerformanceTests.asmdef
+++ b/Assets/Tests/PerformanceTests/PerformanceTests.asmdef
@@ -6,7 +6,8 @@
         "GUID:27619889b8ba8c24980f49ee34dbb44a",
         "GUID:0acc523941302664db1f4e527237feb3",
         "GUID:c0dd0d10738d4ad4a9de57c559d0ca1b",
-        "GUID:c03066ede49430544a8e6df7fcff8ffb"
+        "GUID:c03066ede49430544a8e6df7fcff8ffb",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [
         "Editor"
