Доработка сервиса + PerformanceTests
+Cancellation
+убраны лишние Debug.Log
+убран не работающий сервис гравитации

--- a/Assets/Tests/PlayTests/PlayTests.asmdef
+++ b/Assets/Tests/PlayTests/PlayTests.asmdef
@@ -4,17 +4,17 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
+        "UniTask",
+        "TestUtils",
+        "Unity.PerformanceTesting",
         "GameAssembly"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll",
-        "NSubstitute.dll"
+        "nunit.framework.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
