--- a/Assets/Tests/UnitTests/UnitTests.asmdef
+++ b/Assets/Tests/UnitTests/UnitTests.asmdef
@@ -6,7 +6,8 @@
         "UnityEditor.TestRunner",
         "GameAssembly",
         "TestUtils",
-        "UniTask"
+        "UniTask",
+        "Unity.PerformanceTesting"
     ],
     "includePlatforms": [
         "Editor"
