--- a/Assets/Tests/PlayTests/PlayTests.asmdef
+++ b/Assets/Tests/PlayTests/PlayTests.asmdef
@@ -4,11 +4,12 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
+        "UniTask",
+        "TestUtils",
+        "Unity.PerformanceTesting",
         "GameAssembly"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
