--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.5.1",
+    "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.test-framework": "1.3.2",
     "com.unity.test-framework.performance": "3.0.3",
     "com.unity.textmeshpro": "3.0.6",
