--- a/Assets/Tests/PlayTests/PlayTests.asmdef
+++ b/Assets/Tests/PlayTests/PlayTests.asmdef
@@ -7,7 +7,9 @@
         "UniTask",
         "TestUtils",
         "Unity.PerformanceTesting",
-        "GameAssembly"
+        "GameAssembly",
+        "Unity.InputSystem",
+        "Unity.InputSystem.TestFramework"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
