--- a/Assets/Tests/UnitTests/UnitTests.asmdef
+++ b/Assets/Tests/UnitTests/UnitTests.asmdef
@@ -7,7 +7,9 @@
         "GameAssembly",
         "TestUtils",
         "UniTask",
-        "Unity.PerformanceTesting"
+        "Unity.PerformanceTesting",
+        "Unity.InputSystem",
+        "Unity.InputSystem.TestFramework"
     ],
     "includePlatforms": [
         "Editor"
