--- a/Assets/Tests/UnitTests/UnitTests.asmdef
+++ b/Assets/Tests/UnitTests/UnitTests.asmdef
@@ -9,7 +9,8 @@
         "UniTask",
         "Unity.PerformanceTesting",
         "Unity.InputSystem",
-        "Unity.InputSystem.TestFramework"
+        "Unity.InputSystem.TestFramework",
+        "Zenject"
     ],
     "includePlatforms": [
         "Editor"
