--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.5.1",
     "com.unity.mobile.android-logcat": "1.3.2",
+    "com.unity.recorder": "3.0.4",
     "com.unity.test-framework": "1.3.2",
     "com.unity.test-framework.performance": "3.0.3",
     "com.unity.textmeshpro": "3.0.6",
